--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Currency Converter</string>
+    <string name="to">To</string>
+    <string name="convert">Convert</string>
+    <string name="currency_converter">Currency Converter</string>
+    <string name="enter_the_amount">Enter The Amount</string>
+    <string name="from">From</string>
 </resources>
